[gd_scene load_steps=2 format=3 uid="uid://dnscs04iptupt"]

[ext_resource type="Script" path="res://components/vision_area/vision_area.gd" id="1"]

[node name="VisionArea" type="Area2D"]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource("1")
metadata/_edit_group_ = true

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 12
collide_with_areas = true

[connection signal="area_entered" from="." to="." method="_on_area_entered" flags=3]
[connection signal="area_exited" from="." to="." method="_on_area_exited" flags=3]
